[project]
name = "ds-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gpocas", email = "gpocas01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dashing>=0.1.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811', 'PLR6301']